--- a/offer.html
+++ b/offer.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,87 +5,152 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Offers - CPA Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <script src="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/all.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
+  <script src="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/all.min.js" defer></script>
 </head>
-<body class="bg-gray-50 font-sans">
+<body class="bg-gray-100 font-sans">
 
-  <!-- Sidebar -->
+  <!-- Main Wrapper -->
   <div class="flex h-screen">
-    <aside class="w-64 bg-white shadow-md hidden md:block">
-      <div class="p-6 text-center">
+
+    <!-- Sidebar -->
+    <aside class="w-64 bg-white border-r hidden md:flex flex-col">
+      <div class="p-6 text-center border-b">
         <h1 class="text-2xl font-bold text-blue-600">CPA Pro</h1>
       </div>
-      <nav class="mt-10 px-6 space-y-4">
-        <a href="dashboard.html" class="block text-gray-700 hover:text-blue-600">Dashboard</a>
-        <a href="https://cpapro.github.io/cpapro/offer.html" class="block text-blue-600 font-semibold">Offers</a>
-       
-        <a href="https://cpapro.github.io/cpapro/setting.html" class="block text-gray-700 hover:text-blue-600">Settings</a>
-        <a href="https://cpapro.github.io/cpapro/home.html" class="block text-red-500 mt-6">Sign Out</a>
+      <nav class="flex-1 p-6 space-y-4">
+        <a href="dashboard.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
+          <i class="fas fa-home mr-2"></i> Dashboard
+        </a>
+        <a href="https://cpapro.github.io/cpapro/offer.html" class="flex items-center text-blue-600 font-semibold">
+          <i class="fas fa-bullhorn mr-2"></i> Offers
+        </a>
+        <a href="https://cpapro.github.io/cpapro/setting.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
+          <i class="fas fa-cog mr-2"></i> Settings
+        </a>
+        <a href="https://cpapro.github.io/cpapro/home.html" class="flex items-center text-red-500 mt-6">
+          <i class="fas fa-sign-out-alt mr-2"></i> Sign Out
+        </a>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 p-6 md:p-10">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">Exclusive CPA Offers</h2>
+    <div class="flex-1 flex flex-col overflow-y-auto">
 
-      <!-- Offers Section -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Offer 1 -->
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800">Click and earn</h3>
-            <p class="text-gray-600 mt-2">Earn $0.87 Per Click. Perfect for targeting users in the USA.</p>
-            <p class="text-lg text-blue-600 font-semibold mt-4">$0.87/ Click</p>
-            <p class="text-gray-700 mt-4">Description: If the users click your link, then you will earn $0.87 </p>
-            <button onclick="openModal('Click and earn $0.87/click', 'Deactive')" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Start Promoting</button>
+      <!-- Top Bar -->
+      <header class="bg-white shadow-md p-6 flex justify-between items-center">
+        <h2 class="text-2xl font-bold text-gray-800">Exclusive Offers</h2>
+        <div class="text-gray-600">Welcome, <span class="font-semibold text-blue-600">Affiliate!</span></div>
+      </header>
+
+      <!-- Page Content -->
+      <main class="flex-1 p-6 md:p-10">
+
+        <!-- Overview Cards -->
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 mb-10">
+          <div class="bg-white shadow rounded-lg p-6">
+            <div class="flex items-center">
+              <div class="bg-blue-100 p-3 rounded-full text-blue-600">
+                <i class="fas fa-bullhorn fa-lg"></i>
+              </div>
+              <div class="ml-4">
+                <p class="text-gray-500 text-sm">Total Offers</p>
+                <p class="text-2xl font-bold text-gray-800">3</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-white shadow rounded-lg p-6">
+            <div class="flex items-center">
+              <div class="bg-green-100 p-3 rounded-full text-green-600">
+                <i class="fas fa-dollar-sign fa-lg"></i>
+              </div>
+              <div class="ml-4">
+                <p class="text-gray-500 text-sm">Top Payout</p>
+                <p class="text-2xl font-bold text-gray-800">$1.75 / Lead</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="bg-white shadow rounded-lg p-6">
+            <div class="flex items-center">
+              <div class="bg-yellow-100 p-3 rounded-full text-yellow-600">
+                <i class="fas fa-chart-line fa-lg"></i>
+              </div>
+              <div class="ml-4">
+                <p class="text-gray-500 text-sm">Active Campaigns</p>
+                <p class="text-2xl font-bold text-gray-800">2</p>
+              </div>
+            </div>
           </div>
         </div>
 
-        <!-- Offer 2 -->
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800">Mobile App Install</h3>
-            <p class="text-gray-600 mt-2">Earn $1.20 per mobile app install. Target mobile traffic and increase your earnings.</p>
-            <p class="text-lg text-blue-600 font-semibold mt-4">$1.20 / Lead</p>
-            <p class="text-gray-700 mt-4">Description: Promote a mobile app and get paid every time someone installs it through your referral link.</p>
-            <button onclick="openModal('Mobile App Install', '$1.20 / Lead', 'Deactive')" class="mt-4 px-6 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition duration-300">Start Promoting</button>
+        <!-- Offers Section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+          <!-- Offer Card -->
+          <div class="bg-white shadow-lg rounded-lg hover:shadow-2xl transition">
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800">Click and Earn</h3>
+              <p class="text-gray-600 mt-2">Earn $0.87 per valid click. High converting offer for US traffic.</p>
+              <div class="mt-4 flex items-center justify-between">
+                <span class="text-blue-600 font-semibold">$0.87 / Click</span>
+                <button onclick="openModal('Click and Earn', '$0.87 / Click', 'Deactive')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
+              </div>
+            </div>
           </div>
+
+          <!-- Offer Card -->
+          <div class="bg-white shadow-lg rounded-lg hover:shadow-2xl transition">
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800">Mobile App Install</h3>
+              <p class="text-gray-600 mt-2">Get paid $1.20 for each app installation through your referral link.</p>
+              <div class="mt-4 flex items-center justify-between">
+                <span class="text-green-600 font-semibold">$1.20 / Lead</span>
+                <button onclick="openModal('Mobile App Install', '$1.20 / Lead', 'Deactive')" class="px-4 py-2 bg-green-600 text-white text-sm rounded hover:bg-green-700">Promote</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Offer Card -->
+          <div class="bg-white shadow-lg rounded-lg hover:shadow-2xl transition">
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800">Survey Complete</h3>
+              <p class="text-gray-600 mt-2">Earn $1.75 for every user who completes a simple survey.</p>
+              <div class="mt-4 flex items-center justify-between">
+                <span class="text-yellow-600 font-semibold">$1.75 / Lead</span>
+                <button onclick="openModal('Survey Complete', '$1.75 / Lead', 'Deactive')" class="px-4 py-2 bg-yellow-600 text-white text-sm rounded hover:bg-yellow-700">Promote</button>
+              </div>
+            </div>
+          </div>
+
         </div>
 
-        <!-- Offer 3 -->
-        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-          <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800">Survey Complete</h3>
-            <p class="text-gray-600 mt-2">Complete surveys and earn $1.75 for each successful submission. Easy to promote!</p>
-            <p class="text-lg text-blue-600 font-semibold mt-4">$1.75 / Lead</p>
-            <p class="text-gray-700 mt-4">Description: Encourage users to complete online surveys and earn rewards based on their submissions.</p>
-            <button onclick="openModal('Survey Complete', '$1.75 / Lead', 'Deactive')" class="mt-4 px-6 py-2 bg-yellow-600 text-white rounded-lg hover:bg-yellow-700 transition duration-300">Start Promoting</button>
-          </div>
-        </div>
+      </main>
+
+    </div>
+
+  </div>
+
+  <!-- Offer Modal -->
+  <div id="offerModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-96">
+      <h3 id="offerTitle" class="text-2xl font-bold text-gray-800"></h3>
+      <p id="offerPrice" class="text-lg text-blue-600 mt-2"></p>
+      <p id="offerDescription" class="text-gray-600 mt-4"></p>
+      <p id="offerStatus" class="mt-4 font-semibold text-gray-800"></p>
+      <div class="flex justify-end mt-6">
+        <button onclick="closeModal()" class="bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700">Close</button>
       </div>
     </div>
   </div>
 
-  <!-- Modal -->
-  <div id="offerModal" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center hidden">
-    <div class="bg-white p-6 rounded-lg w-96">
-      <h3 class="text-2xl font-semibold text-gray-800" id="offerTitle"></h3>
-      <p class="text-lg text-gray-600 mt-2" id="offerPrice"></p>
-      <p class="text-gray-700 mt-4" id="offerDescription"></p>
-      <p class="mt-4 font-semibold text-gray-800" id="offerStatus"></p>
-      <div class="mt-4 flex justify-end">
-        <button onclick="closeModal()" class="px-6 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition duration-300">Close</button>
-      </div>
-    </div>
-  </div>
-
+  <!-- Modal Script -->
   <script>
     function openModal(title, price, status) {
       document.getElementById('offerTitle').innerText = title;
       document.getElementById('offerPrice').innerText = price;
-      document.getElementById('offerDescription').innerText = "This is the description of the offer: " + title;
-      document.getElementById('offerStatus').innerText = "Status: " + status;
+      document.getElementById('offerDescription').innerText = `Promote ${title} and earn commissions.`;
+      document.getElementById('offerStatus').innerText = `Status: ${status}`;
       document.getElementById('offerModal').classList.remove('hidden');
     }
 
