--- a/setting.html
+++ b/setting.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Settings - CPA Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/> <!-- Font Awesome -->
 </head>
 <body class="bg-gray-50 font-sans">
 
@@ -27,11 +28,26 @@
         <h1 class="text-2xl font-bold">CPA Pro</h1>
       </div>
       <nav class="mt-10 px-6 space-y-4">
-        <a href="dashboard.html" class="block text-white hover:text-gray-200 transition duration-300">Dashboard</a>
-        <a href="offers.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
-        <a href="withdraw.html" class="block text-white hover:text-gray-200 transition duration-300">Withdraw</a>
-        <a href="settings.html" class="block font-bold underline text-white">Settings</a>
-        <a href="signin.html" class="block text-red-500 mt-6 hover:text-red-400 transition duration-300">Sign Out</a>
+        <a href="dashboard.html" class="flex items-center space-x-3 text-white hover:text-gray-200 transition duration-300">
+          <i class="fas fa-tachometer-alt"></i> <!-- Dashboard Icon -->
+          <span>Dashboard</span>
+        </a>
+        <a href="offers.html" class="flex items-center space-x-3 text-white hover:text-gray-200 transition duration-300">
+          <i class="fas fa-tags"></i> <!-- Offers Icon -->
+          <span>Offers</span>
+        </a>
+        <a href="withdraw.html" class="flex items-center space-x-3 text-white hover:text-gray-200 transition duration-300">
+          <i class="fas fa-dollar-sign"></i> <!-- Withdraw Icon -->
+          <span>Withdraw</span>
+        </a>
+        <a href="settings.html" class="flex items-center space-x-3 font-bold underline text-white">
+          <i class="fas fa-cogs"></i> <!-- Settings Icon -->
+          <span>Settings</span>
+        </a>
+        <a href="signin.html" class="flex items-center space-x-3 text-red-500 mt-6 hover:text-red-400 transition duration-300">
+          <i class="fas fa-sign-out-alt"></i> <!-- Sign Out Icon -->
+          <span>Sign Out</span>
+        </a>
       </nav>
     </aside>
 
@@ -63,6 +79,7 @@
 
         <div class="pt-8 flex justify-end">
           <button onclick="updatePassword()" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg shadow transition duration-300">
+            <i class="fas fa-save mr-2"></i> <!-- Save Icon -->
             Update Settings
           </button>
         </div>
