--- a/offer.html
+++ b/offer.html
@@ -13,7 +13,7 @@
   <div class="flex h-screen">
 
     <!-- Sidebar -->
-    <aside class="w-64 bg-white border-r hidden md:flex flex-col">
+    <aside id="sidebar" class="w-64 bg-white border-r hidden md:flex flex-col">
       <div class="p-6 text-center border-b">
         <h1 class="text-2xl font-bold text-blue-600">CPA Pro</h1>
       </div>
@@ -38,7 +38,12 @@
 
       <!-- Top Bar -->
       <header class="bg-white shadow-md p-6 flex justify-between items-center">
-        <h2 class="text-2xl font-bold text-gray-800">Exclusive Offers</h2>
+        <div class="flex items-center">
+          <button id="sidebarToggle" class="md:hidden text-gray-600 focus:outline-none">
+            <i class="fas fa-bars"></i>
+          </button>
+          <h2 class="text-2xl font-bold text-gray-800 ml-4">Exclusive Offers</h2>
+        </div>
         <div class="text-gray-600">Welcome, <span class="font-semibold text-blue-600">Affiliate!</span></div>
       </header>
 
@@ -157,6 +162,11 @@
     function closeModal() {
       document.getElementById('offerModal').classList.add('hidden');
     }
+
+    // Toggle Sidebar on mobile
+    document.getElementById('sidebarToggle').addEventListener('click', function() {
+      document.getElementById('sidebar').classList.toggle('hidden');
+    });
   </script>
 
 </body>
