--- a/dashboard.html
+++ b/dashboard.html
@@ -87,7 +87,7 @@
             <i class="fas fa-eye text-blue-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Impressions</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">0</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">12697</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -95,7 +95,7 @@
             <i class="fas fa-mouse-pointer text-green-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Clicks</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">0</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">6835</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -103,7 +103,7 @@
             <i class="fas fa-dollar-sign text-yellow-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$100</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$463</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -111,7 +111,7 @@
             <i class="fas fa-coins text-purple-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Total Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$0</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$2887</h3>
         </div>
       </div>
 
@@ -175,7 +175,7 @@
               <tr class="hover:bg-gray-50 transition">
                 <td class="py-4 px-6 font-medium">Click and Earn</td>
                 <td class="py-4 px-6">
-                  <span class="bg-red-100 text-red-600 text-xs px-3 py-1 rounded-full">Inactive</span>
+                  <span class="bg-green-100 text-green-600 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition">
@@ -203,9 +203,9 @@
           <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
             <div class="flex items-center space-x-3">
               <span class="text-2xl">💰</span>
-              <span class="font-medium text-gray-700">Payment of $25 Sent to PayPal</span>
+              <span class="font-medium text-gray-700">Payment of $250 Sent to PayPal</span>
             </div>
-            <span class="text-xs text-gray-500">1 day ago</span>
+            <span class="text-xs text-gray-500">48 minutes ago</span>
           </div>
           <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
             <div class="flex items-center space-x-3">
