--- a/withdraw.html
+++ b/withdraw.html
@@ -13,7 +13,6 @@
 <div class="md:hidden flex items-center justify-between p-4 bg-blue-600 text-white">
   <h1 class="text-xl font-bold">CPA Pro</h1>
   <button onclick="toggleSidebar()" class="focus:outline-none">
-    <!-- Hamburger Icon -->
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
     </svg>
@@ -29,7 +28,6 @@
     <nav class="mt-10 px-6 space-y-4">
       <a href="dashboard.html" class="block text-white hover:text-gray-200">Dashboard</a>
       <a href="offers.html" class="block text-white hover:text-gray-200">Offers</a>
-      <a href="leads.html" class="block text-white hover:text-gray-200">Leads</a>
       <a href="withdraw.html" class="block text-white font-bold underline">Withdraw</a>
       <a href="settings.html" class="block text-white hover:text-gray-200">Settings</a>
       <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
@@ -70,7 +68,7 @@
       </form>
     </div>
 
-    <!-- History Table -->
+    <!-- Withdrawal History -->
     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Withdrawal History</h3>
     <div class="bg-white shadow-lg rounded-lg overflow-x-auto">
       <table class="min-w-full text-left" id="historyTable">
@@ -89,6 +87,46 @@
         </tbody>
       </table>
     </div>
+
+    <!-- Recent Withdrawals of Other Users -->
+    <h3 class="text-2xl font-semibold text-gray-800 mt-10 mb-4">Recent Withdrawals of Other Users</h3>
+    <div class="bg-white shadow-lg rounded-lg overflow-x-auto">
+      <table class="min-w-full text-left">
+        <thead class="bg-gray-200 text-gray-700 uppercase text-sm">
+          <tr>
+            <th class="px-6 py-3">User</th>
+            <th class="px-6 py-3">Date</th>
+            <th class="px-6 py-3">Method</th>
+            <th class="px-6 py-3">Amount</th>
+            <th class="px-6 py-3">Status</th>
+          </tr>
+        </thead>
+        <tbody class="text-gray-800">
+          <tr>
+            <td class="px-6 py-4">user452</td>
+            <td class="px-6 py-4">05/10/2025</td>
+            <td class="px-6 py-4">PayPal</td>
+            <td class="px-6 py-4">$150.00</td>
+            <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
+          </tr>
+          <tr>
+            <td class="px-6 py-4">affiliatePro23</td>
+            <td class="px-6 py-4">05/09/2025</td>
+            <td class="px-6 py-4">Bitcoin</td>
+            <td class="px-6 py-4">$200.00</td>
+            <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
+          </tr>
+          <tr>
+            <td class="px-6 py-4">leadsMaster99</td>
+            <td class="px-6 py-4">05/08/2025</td>
+            <td class="px-6 py-4">Tether</td>
+            <td class="px-6 py-4">$50.00</td>
+            <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
 </div>
 
@@ -132,10 +170,8 @@
 
     error.classList.add("hidden");
 
-    // Show popup
     alert("Your withdrawal request is pending!");
 
-    // Add to table
     const row = document.createElement("tr");
     row.innerHTML = `
       <td class="px-6 py-4">${new Date().toLocaleDateString()}</td>
@@ -152,9 +188,10 @@
     tableBody.prepend(row);
     form.reset();
 
-    // Cancel button logic
     row.querySelector(".cancelBtn").addEventListener("click", function () {
-      row.remove();
+      if (confirm("Are you sure you want to cancel this request?")) {
+        row.remove();
+      }
     });
   });
 </script>
